@@ -24,11 +24,10 @@ import java.math.BigDecimal;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Types;
 import java.util.Properties;
 
-import org.hibernate.Hibernate;
 import org.hibernate.HibernateException;
-import org.hibernate.type.NullableType;
 import org.hibernate.usertype.ParameterizedType;
 import org.hibernate.usertype.UserType;
 import org.hibernate.util.EqualsHelper;
@@ -136,8 +135,7 @@ import org.jasypt.hibernate.encryptor.HibernatePBEEncryptorRegistry;
  */
 public final class EncryptedBigDecimalType implements UserType, ParameterizedType {
 
-    private static final NullableType nullableType = Hibernate.BIG_DECIMAL;
-    private static final int sqlType = nullableType.sqlType();
+    private static final int sqlType = Types.NUMERIC;
     private static final int[] sqlTypes = new int[]{ sqlType };
     
     private boolean initialized = false;
